Date	Added
12/16
	* Fixed compile time errors for gcc 2.95 [MouseJstr]
	* Added #itemlist, removed @charitemlist [MC Cameri]
	* Changed @job and #job so that when it's used it unequips all the items, to prevent sprite errors [MC Cameri]
        * Updated Forging and Potion making formulas by DracoRPG [celest]
        * Changes to the guild skills
          - Dropped using sc_data and use flag values instead
          - Changed moving guild skill units to once every 'move request' only instead
            of every movement - should reduce server load abit
          - Corrected crash when checking its skill requirements
        * Initialise 'canregen' when logging into map - forgot to add this earlier,
          sorry ^^; [celest]

12/15
	* Fixed more compile errors gcc 2.95 [MouseJstr]
        * Removed log files from svn... they will be created when
          needed [MouseJstr]
        * Removed unused var in src/map/map.c:107 [MouseJstr]
        * fix compile error in text converters [MouseJstr]
        * Skill Updates [celest]
          - Corrected traps to last longer in GvG
          - Some minor changes to Hiding, Cloaking and Chasewalk to prevent it from
            not working if sc_data is null
          - Corrected an error in Cannibalize
          - Updated Marionette Control to check its range from the partner
          - Updated Berserk to disable hp and sp regen for 5 minutes after the skill
        * Changed the weather gm commands to be able to toggle on and off. For example,
          use @snow once to turn it on, reuse it again to turn it off. [celest]
        * Added Jawaii and Ayothaya to @go list [celest]
        * Changed the default values for ranged, magic and misc damage rate in
          battle_athena to 60, 50 and 60 [celest]
        * Removed redundant 'berserkdamagetick' from map_session_data [celest]
        * Added changes to map.h according to Shinomori [celest]

12/14