@@ -1,5 +1,7 @@
 Date	Added
 12/16
+	* Fixed a misuse of mysql_config (thanks Daegalus for
+	  creating a reproducable environment for me)   [MouseJstr]
 	* Fixed compile time errors for gcc 2.95 [MouseJstr]
 	* Added #itemlist, removed @charitemlist [MC Cameri]
 	* Changed @job and #job so that when it's used it unequips all the items, to prevent sprite errors [MC Cameri]
